<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddingActivity">

    <LinearLayout
        android:id="@+id/linearLayoutNameAnimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.064">

        <TextView
            android:id="@+id/textViewNameAnimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TextNameAnimalTextResource" />

        <EditText
            android:id="@+id/editTextTextNameAnimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/HintNameAnimalTextResource"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#757575" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutAgeAnimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutLengthAnimal"
        app:layout_constraintVertical_bias="0.154">

        <TextView
            android:id="@+id/textViewAgeAnimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TextAgeAnimalTextResource" />

        <EditText
            android:id="@+id/editTextTextAgeAnimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/HintAgeAnimalTextResource"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="#757575" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutLengthAnimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutWeightAnimal"
        app:layout_constraintVertical_bias="0.102">

        <TextView
            android:id="@+id/textViewLengthAnimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TextLengthAnimalTextResource" />

        <EditText
            android:id="@+id/editTextTextLengthAnimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/HintLengthAnimalTextResource"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="#757575" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutWeightAnimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutColorAnimal"
        app:layout_constraintVertical_bias="0.076">

        <TextView
            android:id="@+id/textViewWeightAnimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TextWeightAnimalTextResource" />

        <EditText
            android:id="@+id/editTextTextWeightAnimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/HintWeightAnimalTextResource"
            android:inputType="number"
            android:minHeight="48dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutColorAnimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutNameAnimal"
        app:layout_constraintVertical_bias="0.067">

        <TextView
            android:id="@+id/textViewColorAnimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/TextColorAnimalTextResource"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/editTextTexColorAnimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/HintColorAnimalTextResource"
            android:inputType="textPersonName"
            android:minHeight="48dp" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonSaveAnimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ButtonSaveAnimalTextResource"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutAgeAnimal" />

</androidx.constraintlayout.widget.ConstraintLayout>